--- a/css/styles.css
+++ b/css/styles.css
@@ -4,4 +4,24 @@ body {
 .starter-template {
   padding: 3rem 1.5rem;
   text-align: center;
+
+  color:black ;
+  font-family:fantasy;
+  margin:0px;
+}
+
+h1{
+  color: brown;
+  font-family: fantasy,georgia,Verdana,courier;
+  font size:12em;
+  font-weight: 600
+}
+
+div.column{
+  background-color: lightgrey;
+  color:rgb(255,255,255);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
